Fixed logic that was previously broken on keeping and shifting values

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 
 .container{
     width:200px;
+    margin:300px;
     background-color:var(--main-bg-color);
     border-radius:5px;
 }
@@ -175,4 +176,33 @@ body{
     text-align: center;
     color:white;
     border-radius: 0 0 5px 0;
+}
+
+.buttons{
+    display:grid;
+    grid-template-columns: 20px 20px 20px auto;
+}
+
+.buttons div{
+    height:14px;
+    margin:3px 3px;
+    background: rgb(255, 96, 92);
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.buttons div:nth-child(2n){
+    background: rgb(255, 189, 68);
+}
+
+.buttons div:nth-child(3n){
+    background: rgb(0, 202, 78);
+}
+
+
+.buttons div:last-child{
+    height:16px;
+    margin:2px 2px;
+    background: var(--main-bg-color);
+    display: inline-block;
 }
